--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,36 +1,46 @@
 <h1>Welcome to CSE Motors!</h1>
 <section id="sale">
-    <h2>DMC Delorean</h2>
-    <p>3 Cup holders Superman Doors Fuzzy dicel</p>
-    <img src="/images/vehicles/adventador-tn.jpg" alt="vehiculo_1">
-    <button >Own Today</button>
-</section>
-<section id="rewiews">
-    <h2>Batmobile Rewiews</h2>
-    <ul>
-        <li>"The Batmobile is amazing. The technology and design are on another level."</li>
-        <li>"I love it, although it’s a bit expensive, it’s worth every penny."</li>
-        <li>“The best purchase I’ve ever made. Perfect for any situation.”</li>
-        <li>“The design is impressive, but the fuel consumption is high.”</li>
-        <li>“A dream vehicle. The safety and gadgets are impressive.”</li>
-    </ul>
-</section>
-<section id="upgrades">
-    
-    <div>
-        <img src="/images/upgrades/bumper_sticker.jpg" alt="bumper">
-        <a href="">Bumper Stickers</a>
+    <div id="sub-text">
+        <h2>BatMobile</h2>
+        <p>Bulletproof armor</p>
+        <p>Turbocharged engine</p>
+        <p>Advanced AI navigation</p>
+        <a class="today" href="#">Own Today</a>
     </div>
-    <div>
-        <img src="/images/upgrades/flame.jpg" alt="flame">
-        <a href="">Flame Decals</a>
-    </div>
-    <div>
-        <img src="/images/upgrades/flux-cap.png" alt="flux-cap">
-        <a href="">Flux Capacitor</a>
-    </div>
-    <div>
-        <img src="/images/upgrades/hub-cap.jpg" alt="hub-cap">
-        <a href="">Hub Caps</a>
+    <div id="image">
+        <picture>
+            <img src="/images/vehicles/batmobilea.jpg" alt="vehiculo_1">
+        </picture>
     </div>
 </section>
+<div id="options">
+    <section id="rewiews">
+        <h2>Batmobile Rewiews</h2>
+        <ul>
+            <li>"The Batmobile is amazing. The technology and design are on another level."</li>
+            <li>"I love it, although it’s a bit expensive, it’s worth every penny."</li>
+            <li>“The best purchase I’ve ever made. Perfect for any situation.”</li>
+            <li>“The design is impressive, but the fuel consumption is high.”</li>
+            <li>“A dream vehicle. The safety and gadgets are impressive.”</li>
+        </ul>
+    </section>
+    <div id="upgrades">
+        <div id="Stickers">
+            <img src="/images/upgrades/bumper_sticker.jpg" alt="bumper">
+            <a href="">Bumper Stickers</a>
+        </div>
+        <div id="flame">
+            <img src="/images/upgrades/flame.jpg" alt="flame">
+            <a href="">Flame Decals</a>
+        </div>
+        <div id="Capacitor">
+            <img src="/images/upgrades/flux-cap.png" alt="flux-cap">
+            <a href="">Flux Capacitor</a>
+        </div>
+        <div id="Caps">
+            <img src="/images/upgrades/hub-cap.jpg" alt="hub-cap">
+            <a href="">Hub Caps</a>
+        </div>
+    </div>
+</div>
+
