--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,236 @@
 
+h1,h2{
+  font-family: "Playfair Display", system-ui;
+}
+li, a{
+  font-family: "Noto Sans", system-ui;
+}
 /******* Change Box Model ***************/
 *,
 *:before,
 *:after {
   box-sizing: border-box;
+}
+nav{
+  background-color: black;
+  color: aliceblue;
+
+}
+nav ul{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  text-align: center;
+}
+#navegation li{
+  list-style-type: none;
+  font-size: 2vw;
+  margin-top: 7%;
+  margin-bottom: 7%;
+
+}
+body{
+  background-image: url('/images/site/checkerboard.jpg');
+  margin: 20px 30px;
+  
+}
+div{
+  margin: 20px 30px;
+  background-color: aliceblue;
+  border-radius: 1%;
+
+}
+h1{
+  font-size: 70px;
+  margin-left: 5%;
+}
+#sale {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 20px 1fr 1fr 1fr 20px;
+}
+#sub-text {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5); 
+  color: white;
+  border-radius: 5%;
+  text-align: center;
+  grid-column: 2/3;
+  width: 100%;
+  grid-row: 2/5;
+  margin: auto;
+  height: 100%;
+
+}
+#sub-text p{
+  font-size: 1.5vw;
+  text-align: left;
+  margin-bottom: 10%;
+  padding-left: 5%;
+}
+#sub-text h2{
+  font-size: 2vw;
+}
+#sub-text a{
+  color: aliceblue;
+  background-color: rgb(203, 21, 8);
+  text-align: center;
+  text-decoration: none;
+  padding: 5% 8%;
+  border-radius: 10%;
+  transition: all .5s ease-in-out;
+  font-size: 1.5vw;
+}
+#sub-text a:hover{
+  background-color: rgb(0, 0, 0);
+  color: rgb(203, 21, 8);
+}
+#image img {
+  width: 100%;
+  height: auto;
+}
+#image{
+  grid-column: 1/6;
+  grid-row: 1/6;
+}
+
+h2{
+  font-size: 40px;
+}
+.today{
+  margin-top: 220px;
+}
+#options{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+#upgrades{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+#upgrades div{
+  text-align: center;
+}
+#upgrades img{
+  width: 100%;
+  height: auto;
+}
+#upgrades a{
+  display: block;
+}
+#Stickers a{
+  margin-top: 2px;
+}
+#Stickers img{
+  margin-top: 36px;
+}
+#top-header{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+}
+#top-header a{
+  text-decoration: none;
+  font-family: "Playfair Display", system-ui
+}
+.siteName{
+  text-align: left;
+  font-size: 5vw;
+  margin-left: 10%;
+  
+
+}
+#reviwes{
+  font-size: 1vw;
+}
+#tools{
+  text-align: right;
+  font-size: 1.5vw;
+  margin: 3%;
+}
+#image, #upgrades{
+  margin: 10% 12%;
+  border-radius: 0%;
+}
+footer{
+  text-align: left;
+  font-weight: bold;
+  font-size: 1.5vw;
+  margin-left: 3%;
+  margin-top: 5%;
+}
+#rewiews li{
+  font-size: 1.5vw;
+}
+@media (max-width: 768px) {
+  #sub-text {
+    grid-column: 2 / 3;
+    padding: 5%;
+    grid-row: 2/4;
+  }
+
+  #sub-text p {
+    font-size: 1.5vw;
+    margin-bottom: 5%;
+  }
+
+  #sub-text h2 {
+    font-size: 1.5vw;
+  }
+
+  #sub-text a {
+    font-size: 1vw;
+    padding: 3% 5%;
+  }
+  #tools{
+    font-size: 2.5vw;
+  }
+  .siteName{
+    margin-left: 5%;
+  }
+  h1{
+    font-size: 4.5vw
+  }
+  h2{
+    font-size: 3.5vw;
+    margin-left: 1%;
+  }
+  div{
+    margin: 12% 12%;
+    border-radius: 0%;
+    margin-right: 2%
+  }
+  body{
+    margin: -36px -45px;
+  }
+  #image, #upgrades{
+    margin: 10% 12%;
+    border-radius: 0%;
+  }
+  #options{
+    display: block;
+    width: 100%;
+    margin: 1% 0%;
+  }
+  #rewiews li{
+    font-size: 3vw;
+  }
+  #Stickers img{
+    margin-top: 28%;
+  }
+  #upgrades img{
+    width: 100%;
+  }
+  #upgrades a{
+    font-size: 2.5vw;
+  }
+  nav ul{
+    margin-left: -40px;
+  }
+  footer{
+    font-size: 3.5vw;
+  }
 }
