--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,3 @@
-
 h1,h2{
   font-family: "Playfair Display", system-ui;
 }
@@ -14,7 +13,6 @@ li, a{
 nav{
   background-color: black;
   color: aliceblue;
-
 }
 nav ul{
   display: grid;
@@ -26,18 +24,15 @@ nav ul{
   font-size: 2vw;
   margin-top: 7%;
   margin-bottom: 7%;
-
 }
 body{
   background-image: url('/images/site/checkerboard.jpg');
   margin: 20px 30px;
-  
 }
 div{
   margin: 20px 30px;
   background-color: aliceblue;
   border-radius: 1%;
-
 }
 h1{
   font-size: 70px;
@@ -62,7 +57,6 @@ h1{
   grid-row: 2/5;
   margin: auto;
   height: 100%;
-
 }
 #sub-text p{
   font-size: 1.5vw;
@@ -95,7 +89,6 @@ h1{
   grid-column: 1/6;
   grid-row: 1/6;
 }
-
 h2{
   font-size: 40px;
 }
@@ -120,12 +113,13 @@ h2{
 }
 #upgrades a{
   display: block;
+  font-size: 1rem;
 }
 #Stickers a{
   margin-top: 2px;
 }
 #Stickers img{
-  margin-top: 36px;
+  margin-top: 37.5%;
 }
 #top-header{
   display: grid;
@@ -140,8 +134,6 @@ h2{
   text-align: left;
   font-size: 5vw;
   margin-left: 10%;
-  
-
 }
 #reviwes{
   font-size: 1vw;
@@ -171,16 +163,13 @@ footer{
     padding: 5%;
     grid-row: 2/4;
   }
-
   #sub-text p {
     font-size: 1.5vw;
     margin-bottom: 5%;
   }
-
   #sub-text h2 {
     font-size: 1.5vw;
   }
-
   #sub-text a {
     font-size: 1vw;
     padding: 3% 5%;
@@ -222,7 +211,7 @@ footer{
     margin-top: 28%;
   }
   #upgrades img{
-    width: 100%;
+    width: 50%;
   }
   #upgrades a{
     font-size: 2.5vw;
@@ -232,5 +221,12 @@ footer{
   }
   footer{
     font-size: 3.5vw;
+  }
+  #upgrades{
+    margin-left: 11%;
+  }
+  #Stickers img:nth-child(1){
+    margin-top: 16%;
+    margin-bottom: 2.4%;
   }
 }
