--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,8 +16,10 @@ nav{
 }
 nav ul{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   text-align: center;
+  font-size: 40px;
+  list-style-type: none;
 }
 #navegation li{
   list-style-type: none;
@@ -126,7 +128,7 @@ h2{
   grid-template-columns: 1fr 1fr;
   text-align: center;
 }
-#top-header a{
+a{
   text-decoration: none;
   font-family: "Playfair Display", system-ui
 }
