--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,7 +5,7 @@
 <body>
     <div>
         <%- include('../partials/header') %>
-        <%- include('../partials/navigation') %>
+        <%- include('../partials/navigation',) %>
             <main>
                 <%- body %>
             </main>
