--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,4 +1,9 @@
-<h1><%= title %></h1>
-<p><%- message %></p>
-<p>Oops! Looks like something went wrong. But don't worry, it's not the end of the world... yet.</p>
-<p>Would you like to try again, or would you prefer to explore other corners of our application?</p>
+<div id="error404">
+    <div id="message">
+        <h1><%= title %></h1>
+        <p><%- message %></p>
+        <p>Oops! Looks like something went wrong. But don't worry, it's not the end of the world... yet.</p>
+        <p>Would you like to try again, or would you prefer to explore other corners of our application?</p>
+    </div>
+    <img src="/images/site/f.elconfidencial.com_original_07c_691_298_07c691298d228475108f717d7da26198.jpg" alt="cow404">
+</div>
