--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -4,13 +4,26 @@
     <%- include('../partials/navigation') %>
     <%- include('../partials/header') %>
     <h1><%= title %></h1>
+    <% if (error) { %>
+        <ul class="notice">
+       <% error.array().forEach(error => { %>
+         <li><%= error.msg %></li>
+      <%  }) %>
+       </ul>
+      <% } %>
     <form action="/account/register" method="post">
-        <input type="text" name="firstName" placeholder="Nombre" required>
-        <input type="text" name="lastName" placeholder="Apellido" required>
-        <input type="email" name="email" placeholder="Correo electrónico" required>
-        <input type="password" name="password" placeholder="Contraseña" required>
-        <button type="submit">Registrarse</button>
-    </form>
+        <label for="account_firstname">Firstname:</label>
+        <input type="text" id="account_firstname" name="account_firstname" required><br><br>
+        <label for="account_lastname">Lastname:</label>
+        <input type="text" id="account_lastname" name="account_lastname" required><br><br>
+        <label for="account_email">Email:</label>
+        <input type="email" id="account_email" name="account_email" required><br><br>
+        <label for="account_password">Password:</label>
+        <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span>
+        <input type="password" id="account_password" name="account_password" id="accountPassword"required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br><br>
+        <input type="submit" value="Register">
+      </form>
+    
 
     <%- include('../partials/footer') %>
-</idv>
+</div>
