--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -3,9 +3,17 @@
 <div>
     <%- include('../partials/navigation') %>
     <%- include('../partials/header') %>
-    <form action="/account/login" method="POST">
-        <input type="email" name="email" placeholder="Enter a valid email address" required>
-        <input type="password" name="password" placeholder="Contraseña" required>
+    <h1><%= title %></h1>
+    <% if (locals.error && locals.error.array && locals.error.array().length > 0) { %>
+        <ul class="notice">
+          <% locals.error.array().forEach(err => { %>
+            <li><%= err.msg %></li>
+          <%  }) %>
+        </ul>
+      <% } %>
+      
+    <form id ="loginForm" action="/account/login" method="post">
+        <input type="email" name="account_email" placeholder="Enter a valid email address" required>
         <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter, and 1 special character.</span> 
         <input type="password" name="account_password" id="accountPassword" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
         <button type="submit">Iniciar sesión</button>
