--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -13,11 +13,11 @@
       <% } %>
     <form action="/account/register" method="post">
         <label for="account_firstname">Firstname:</label>
-        <input type="text" id="account_firstname" name="account_firstname" required><br><br>
+        <input type="text" id="account_firstname" name="account_firstname" required value="<%= locals.account_firstname %>"><br><br>
         <label for="account_lastname">Lastname:</label>
-        <input type="text" id="account_lastname" name="account_lastname" required><br><br>
+        <input type="text" id="account_lastname" name="account_lastname" required value="<%= locals.account_lastname %>"><br><br>
         <label for="account_email">Email:</label>
-        <input type="email" id="account_email" name="account_email" required><br><br>
+        <input type="email" id="account_email" name="account_email" required value="<%= locals.account_email %>"><br><br>
         <label for="account_password">Password:</label>
         <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span>
         <input type="password" id="account_password" name="account_password" id="accountPassword"required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br><br>
