--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -274,6 +274,135 @@ footer{
 }
 
 
+h1 {
+  text-align: center;
+  color: #333;
+}
+
+#loginForm{
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#loginForm label {
+  display: block;
+  margin-bottom: 8px;
+  color: #333;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"],
+input[type="file"],
+textarea{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus,
+input[type="number"]:focus,
+input[type="file"]:focus,
+textarea:focus {
+    border-color: #0066cc;
+    box-shadow: 0 0 5px rgba(0, 102, 204, 0.5);
+    outline: none;
+}
+
+#loginForm span {
+  display: block;
+  margin-bottom: 10px;
+  color: #666;
+  font-size: 0.9em;
+}
+
+#loginForm button {
+  width: 100%;
+  padding: 10px;
+  background-color: #0066cc;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+input[type="submit" i] {
+  width: 100%;
+  padding: 10px;
+  background-color: #0066cc;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+#loginForm button:hover {
+  background-color: #005bb5;
+}
+
+#loginForm p {
+  text-align: center;
+  color: #333;
+}
+
+#loginForm a {
+  color: #0066cc;
+  text-decoration: none;
+}
+
+#loginForm a:hover {
+  text-decoration: underline;
+}
+
+.container h1 {
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.container p {
+  text-align: center;
+  color: #666;
+  margin-bottom: 30px;
+}
+
+.container a {
+  display: inline-block;
+  background-color: #0066cc;
+  color: white;
+  padding: 10px 20px;
+  margin: 10px 0;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.container a:hover {
+  background-color: #005bb5;
+}
+
+.container br {
+  margin-bottom: 20px;
+}
+#imagesum{
+  margin: 10% 0%;
+}
+
+
 @media (max-width: 768px) {
   #sub-text {
     grid-column: 2 / 3;
