--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,4 +3,5 @@ let year = d.getFullYear() %>
 <footer>
   <a href="/error">Trigger 500 Error</a>
   <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
+  <a href="/inv/">inv</a>
 </footer>
