--- a/views/account/accountManagement.ejs
+++ b/views/account/accountManagement.ejs
@@ -5,7 +5,7 @@
 <%- include('../partials/header') %>
 <%- include('../partials/navigation') %>
   <h1><%= title %></h1>
-
+<div id="access">
   <% if (accountData) { %>
     <h2>Welcome <%= accountData.account_firstname %></h2>
 
@@ -16,6 +16,7 @@
       <h3>Inventory Management</h3>
       <p><a href="/inv/">Access Inventory Management</a></p>
     <% } %>
+</div>
   <% } else { %>
     <p>Please log in to view account management.</p>
   <% } %>
